<resources>
    <!--  STRINGS GENERALES DE LA APLICACIÓN  -->

    <string name="app_name">Inin</string>
    <string name="nombreApp_text">Inventario Inteligente</string>
    <string name="version_text">1.0.0</string>


    <!--  ETIQUETAS Y BOTONES DE LA PANTALLA DE LOGIN DE EMPRESA  -->

    <string name="usuarioEmpresa_lbl">Nombre de la empresa</string>
    <string name="nifEmpresa_lbl">NIF de la empresa</string>
    <string name="textoRegistroEmpresa_btn">Registrar Empresa</string>
    <string name="registrarseEmpresa_text">¿Todavía sin empresa en Inin?</string>

    <!--  ETIQUETAS Y BOTONES DE LA PANTALLA DE LOGIN DE USUARIO  -->

    <string name="usuario_lbl">Usuario</string>
    <string name="contraseña_lbl">Contraseña</string>
    <string name="iniciarSesion_btn">Iniciar sesión</string>
    <string name="registroUsuario_btn">Registrar usuario</string>

    <!--  ETIQUETAS Y BOTONES DE LA PANTALLA DE REGISTRO DE EMPRESA  -->

    <string name="registrarNombreEmpresa_lbl">Nombre de tu empresa</string>
    <string name="registrarNifEmpresa_lbl">NIF de tu empresa</string>
    <string name="registroEmpresa_btn">REGISTRARSE</string>
    <string name="textoRegistro_text">¿Deseas formar parte de la familia Inin?</string>
    <string name="textoRegistro2_text">¡Inscribe tu empresa y descubre todas las ventajas de tener un inventario inteligente!</string>

    <!--  ETIQUETAS Y BOTONES DE LA PANTALLA DE PASSWORD ADMINISTRADOR  -->

    <string name="setPasswordAdministrador_txt">Antes de continuar necesitamos establecer su contraseña de administrador</string>
    <string name="establecerPassword_btn">Establecer contraseña</string>
    <string name="password_lbl">Contraseña</string>

    <!--  ETIQUETAS Y BOTONES DE LA PANTALLA DE USUARIOS  -->

    <string name="usuarios_txt">USUARIOS</string>

    <!--  ETIQUETAS Y BOTONES DE LA PANTALLA DE INVENTARIO  -->

    <string name="inventario_txt">INVENTARIO</string>
    <string name="altaProducto_btn">Añadir Producto</string>
    <string name="nombre_ll">Nombre</string>
    <string name="stock_ll">Stock</string>

    <!--  ETIQUETAS Y BOTONES DE LA PANTALLA DE AÑADIR PRODUCTO  -->

    <string name="addProduct_txt">Añadir Producto</string>
    <string name="nombreProducto_lbl">Nombre producto</string>
    <string name="precioProducto_lbl">Precio producto</string>
    <string name="stockProducto_lbl">Stock producto</string>
    <string name="addProducto_btn">Añadir</string>
    <string name="volver_btn">Volver</string>

    <!--  ETIQUETAS Y BOTONES DE LA PANTALLA DE MODIFICAR PRODUCTO  -->

    <string name="modificarProducto_txt">Modificar Producto</string>
    <string name="nombreProductoModificar_lbl">Nombre producto</string>
    <string name="precioProductoModificar_lbl">Precio producto</string>
    <string name="stockProductoModificar_lbl">Stock producto</string>
    <string name="ModificarProducto_btn">Modificar</string>
    <string name="volverModificar_btn">Volver</string>

    <!--  ETIQUETAS Y BOTONES DE LA PANTALLA DE PEDIDOS  -->

    <string name="pedidos_txt">PEDIDOS</string>
    <string name="altaPedido_btn">Añadir Pedido</string>
    <string name="id_ll">ID</string>
    <string name="fecha_ll">Fecha</string>
    <string name="precio_ll">Precio</string>

    <!--  ETIQUETAS Y BOTONES DE LA PANTALLA DE AÑADIR PEDIDO  -->

    <string name="addPedido_txt">Realizar Pedido</string>
    <string name="realizarPedido_btn">Confirmar</string>
    <string name="cantidad_ll">Cantidad</string>
    <string name="fCaducidad_ll">Fecha Caducidad</string>

    <!--  ETIQUETAS Y BOTONES DE LA PANTALLA DE VER PEDIDO  -->

    <string name="informacionPedido_txt">Información del pedido</string>
    <string name="volverInformacion_btn">Volver</string>

    <!--  ETIQUETAS Y BOTONES DE LA PANTALLA DE CADUCIDADES  -->

    <string name="caducidades_txt">Caducidades</string>


</resources>