<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SetPasswordAdministradorActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/setPasswordAdministrador_txt"
        android:fontFamily="@font/tw_regular"
        android:textColor="@color/colorSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPasswordAdministrador"
        style="@style/CustomTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorSecondaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPasswordAdministrador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tw_regular"
            android:hint="@string/contraseña_lbl"
            android:inputType="textPassword"
            android:textColor="@color/colorTerciary"
            android:textColorHighlight="@color/colorPrimaryWhite"
            android:textSize="20sp" />
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/establecerPassword_btn"
        style="@style/CustomButtonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/establecerPassword_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPasswordAdministrador" />


</androidx.constraintlayout.widget.ConstraintLayout>