<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".InicioSesionEmpresasActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="137dp"
        android:layout_height="132dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/custom_cursor"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:textColorHint="@color/hint_color"
        app:boxBackgroundColor="@color/colorPrimaryLight"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/colorPrimaryLight"
        app:hintTextColor="@color/hint_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombreEmpresaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tw_regular"
            android:hint="@string/usuarioEmpresa_lbl"
            android:inputType="text"
            android:textColor="@color/colorTerciary"
            android:textColorHighlight="@color/colorPrimaryWhite"
            android:textSize="20sp"
            android:maxLength="50"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/custom_cursor"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColorHint="@color/hint_color"
        app:boxBackgroundColor="@color/colorPrimaryLight"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/colorPrimaryLight"
        app:hintTextColor="@color/hint_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tw_regular"
            android:hint="@string/nifEmpresa_lbl"
            android:inputType="text"
            android:maxLength="9"
            android:textColor="@color/colorTerciary"
            android:textColorHighlight="@color/colorPrimaryWhite"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registrarseEmpresa_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/tw_regular"
        android:text="@string/registrarseEmpresa_text"
        android:textColor="@color/colorSecondary"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSesion_button" />

    <Button
        android:id="@+id/registrarEmpresa_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11.5dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/tw_bold"
        android:insetLeft="-20dp"
        android:insetRight="-20dp"
        android:text="@string/registroEmpresa_btn"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toEndOf="@+id/registrarseEmpresa_text"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSesion_button"
        app:shapeAppearance="@style/ShapeAppearance.Material3.SmallComponent" />

    <Button
        android:id="@+id/iniciarSesion_button"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/tw_regular"
        android:text="@string/iniciarSesion_btn"
        android:textColor="@color/colorSecondary"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:shapeAppearance="@style/ShapeAppearance.Material3.SmallComponent"
        app:strokeColor="@color/colorSecondary"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>